# self-balancer

./: .gitignore  CMakeLists.txt  log-to-file.sh  self-balancer.kst  self-balancer2.kst  stm32.cmake
doc/: micro.ioc
src/: MadgwickAHRS.c  MadgwickAHRS.h  MyTelemetry.cc  MyTelemetry.h  main.cc  stm32f4xx_hal_conf.h  stm32f4xx_it.c  syscalls.c
